--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "materialize-css": "^0.97.7",
     "morgan": "~1.7.0",
+    "normalize.css": "^5.0.0",
     "serve-favicon": "~2.3.0",
     "stylus": "0.54.5"
   }
