--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "normalize.css": "^5.0.0",
     "serve-favicon": "~2.3.0",
     "stylus": "0.54.5"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-jade": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
