--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "materialize-css": "^0.97.7",
     "morgan": "~1.7.0",
+    "nodemailer": "^3.1.1",
     "normalize.css": "^5.0.0",
     "serve-favicon": "~2.3.0",
     "stylus": "0.54.5"
