--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "gillingham2",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+      "node": "6"
+    },
   "scripts": {
     "start": "node ./bin/www"
   },
