--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "express-minify": "^0.2.0",
     "jade": "~1.11.0",
     "materialize-css": "^0.97.7",
     "morgan": "~1.7.0",
